Restore WORKMAN+ logo at the top of the page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- ヘッダー -->
+    <header class="simple-header">
+        <div class="container">
+            <div class="logo">
+                <h1>WORKMAN+</h1>
+            </div>
+        </div>
+    </header>
 
     <!-- メインビジュアル -->
     <section class="hero">
